# PTS

./: .gitignore  LICENCE  Makefile  README.md  arrow.f  ast.ml  dune-project  lexer.mll  lx_xx.f  main.ml  main_js.js  options.ml  pair.fw  parser.mly  printer.ml  pts.opam  reduc.ml  style.css  typer.ml
.github/workflows/: main.yml
doc/: Ast.Id.html  Ast.Id2.html  Ast.Id2Map.html  Ast.Id3.html  Ast.IdMap.html  Ast.IdSet.html  Ast.html  Color.html  Options.html  Printer.html  Pts.html  Reduc.html  Typer.html  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Ast.Id.html  type_Ast.Id2.html  type_Ast.Id2Map.html  type_Ast.Id3.html  type_Ast.IdMap.html  type_Ast.IdSet.html  type_Ast.html  type_Color.html  type_Options.html  type_Printer.html  type_Pts.html  type_Reduc.html  type_Typer.html
html/: dune  index.html  main_js.js  main_js.ml  style.css
src/: .merlin  ast.ml  color.ml  dune  example.ml  lexer.mll  main.ml  options.ml  parser.mly  printer.ml  pts.ml  reduc.ml  typer.ml
tests/: ack.f  arith.f  arrow.f  bool.f  contraposition.fw  deMorgan.cc  fact.f  girard.u  id.f  list.fw  logicEq.cc  logicEx.cc  logicOr.cc  lx_xx.f  lx_xx_lxx.f  mini_list.cc  option.fw  pair.fw  tests.sh  tree.fw
