(ocamllex lexer)

(menhir
  (modules parser)
  (flags --explain)
)

(library
 	(name mylib)
 	(wrapped false)
 	(modules Color Ast Parser Reduc Lexer Printer Options Typer ))

(executable
 	(name pts)
		(public_name pts)
		(promote
			(until-clean)
			(into ../))
 	(modules pts)
 	(libraries mylib))
